--- a/src/index.css
+++ b/src/index.css
@@ -69,14 +69,14 @@ text-decoration: none;
 .blog-details div {
   margin: 20px 0;
 }
-/* .blog-details button {
+.blog-details button {
   background: #f1356d;
   color: #fff;
   border: 0;
   padding: 8px;
   border-radius: 8px;
   cursor: pointer;
-} */
+}
 
 /* Create new blog form */
 .create {
